Able to navigate through the grid by keyboard

--- a/src/app/customer/components/customer-list/customer-list.component.html
+++ b/src/app/customer/components/customer-list/customer-list.component.html
@@ -1,4 +1,4 @@
-<div class="customer-list">
+<div class="customer-list" tabindex="0">
   <toolbar [showProgress]="isLoading">
     <toolbar-title>Quản lý khách hàng</toolbar-title>
     <actions>
