--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="product-list">
+<div class="product-list" tabindex="0">
   <toolbar [showProgress]="isLoading">
     <toolbar-title>Quản lý sản phẩm</toolbar-title>
     <actions>
