--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -103,7 +103,8 @@
             [isHeaderSticky]="false"
             [showFooter]="true"
             [height]="height"            
-            [useShift]="true">
+            [useShift]="true"
+            [rowHeight]="60">
       </grid>
     </div>
   </div>  
