More handling for hot keys

--- a/src/app/customer/components/customer-search/customer-search.component.html
+++ b/src/app/customer/components/customer-search/customer-search.component.html
@@ -34,6 +34,6 @@
   </div>
   <div class="actions">
     <button mat-flat-button (click)="clear()">Xóa</button>
-    <button mat-flat-button (click)="doSearch()" color="primary">Tìm (F9)</button>
+    <button mat-flat-button (click)="doSearch()" color="primary">Tìm (Enter)</button>
   </div>
 </div>
