--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -81,9 +81,9 @@
       </product-lookup>
       <div class="price-tag">
         <mat-chip-list matSuffix>
-          <mat-chip (click)="onPriceTagClick('retail')" [selected]="selectedPrice == 'retail'">LẺ</mat-chip>
-          <mat-chip (click)="onPriceTagClick('wholesale')" [selected]="selectedPrice == 'wholesale'">SỈ</mat-chip>
-          <mat-chip (click)="onPriceTagClick('discount')" [selected]="selectedPrice == 'discount'">KHUYẾN MÃI</mat-chip>
+          <mat-chip (click)="onPriceTagClick('retail')" [selected]="selectedPrice == 'retail'">LẺ (L)</mat-chip>
+          <mat-chip (click)="onPriceTagClick('wholesale')" [selected]="selectedPrice == 'wholesale'">SỈ (S)</mat-chip>
+          <mat-chip (click)="onPriceTagClick('discount')" [selected]="selectedPrice == 'discount'">KHUYẾN MÃI (K)</mat-chip>
         </mat-chip-list>
       </div>      
     </div>
