--- a/src/site.scss
+++ b/src/site.scss
@@ -104,20 +104,15 @@
 }
 
 .sidebar {
-  .section {
-    margin-bottom: 16px;
-
-    .title {
-      font-size: 16px;
-      font-weight: 600;
-      padding: 8px;
-      padding-left: 20px;
-      background-color: whitesmoke;
-      margin-left: -22px;
-      margin-right: -22px;
-      margin-bottom: 8px;
-      color: #3678c4;
-    }
+  .subtitle {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 8px;
+    padding-left: 12px;
+    background-color: whitesmoke;
+    margin-bottom: 8px;
+    color: #3678c4;    
   }
 }
 
