Enable HMR and UI tweaks

--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -1,11 +1,6 @@
 <div>
-  <div class="ui grid">
-    <div class="eight wide column">
-      <mat-form-field>
-        <input matInput placeholder="Mã SP" [(ngModel)]="product.no" required disabled>
-      </mat-form-field>
-    </div>
-    <div class="eight wide column">
+  <div class="ui grid">    
+    <div class="sixteen wide column">
       <mat-form-field>
         <input #productBarcodeInput matInput placeholder="Mã vạch" [(ngModel)]="product.barcode">
       </mat-form-field>
