--- a/src/site.scss
+++ b/src/site.scss
@@ -147,3 +147,22 @@
   padding-left: 8px;
   border-left: 2px solid lightgrey;
 }
+
+.mat-form-field-label-wrapper {
+  top: -16px !important;
+  padding-top: 16px !important;
+}
+
+.mat-form-field-label {
+  font-size: 16px !important;
+}
+
+.mat-form-field-should-float {
+  .mat-form-field-label-wrapper {
+    top: -22px !important;
+  }
+
+  .mat-form-field-label {
+    font-size: 18px !important;
+  }
+}
