--- a/src/app/retail/components/print/print.component.html
+++ b/src/app/retail/components/print/print.component.html
@@ -19,16 +19,16 @@
   <div style="padding-top: 8px;padding-bottom: 4px;border-top: 2px solid grey;" class="section items">
     <div style="display: flex; justify-content: space-between; font-weight: 600; margin-bottom: 8px" class="flex header">
       <div style="width: 25%">Mặt hàng</div>
+      <div style="width: 25%; text-align: center">SL</div>
       <div style="width: 25%; text-align: right">Đơn giá</div>
-      <div style="width: 25%; text-align: right">SL</div>
       <div style="width: 25%; text-align: right">Tổng</div>
     </div>
     <div class="item" *ngFor="let item of invoice.items; let i = index">
       <div style="margin-bottom: 4px">{{i + 1}}.  {{item.product.name}}</div>
       <div style="margin-bottom: 4px;display: flex;justify-content: space-between" class="flex">
         <div style="width: 25%"></div>
+        <div style="width: 25%; text-align: center">{{item.qty | number}}</div>
         <div style="width: 25%; text-align: right">{{item.price | number}}</div>
-        <div style="width: 25%; text-align: right">{{item.qty | number}}</div>
         <div style="width: 25%; text-align: right">{{item.total | number}}</div>
       </div>
     </div>
