--- a/src/app/widgets/grid/grid.component.scss
+++ b/src/app/widgets/grid/grid.component.scss
@@ -16,7 +16,7 @@
       }
 
       &:hover {
-        background-color: #F1F1F1 !important;
+        background-color: #F1F1F1;
         transition: background 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
       }
 
