--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -20,7 +20,8 @@
           (select)="onSelect($event)"
           (delete)="onDelete($event)"
           (sortChange)="onSortChange($event)"
-          [height]="height">
+          [height]="height"
+          [rowClass]="getRowClass">
     </grid>
   </div>
   
