--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -22,7 +22,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: isHeaderSticky"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row, i)"
         [class.highlighted]="selectedIndex == i"
-        [ngClass]="!!rowClass && !!row[rowClass] ? row[rowClass].toLowerCase() : ''"></tr>
+        [ngClass]="getRowClass(row)"></tr>
     <ng-container *ngIf="showFooter">
       <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: isFooterSticky"></tr>
     </ng-container>
