--- a/src/app/widgets/dropdown/dropdown.component.scss
+++ b/src/app/widgets/dropdown/dropdown.component.scss
@@ -40,6 +40,8 @@
 
     input.search {
       padding-left: 0px !important;
+      font-size: 16px;
+      top: -3px !important;
     }
 
     .text {
