--- a/src/site.scss
+++ b/src/site.scss
@@ -172,3 +172,7 @@
     border-left: 4px solid red;
   }
 }
+
+.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary {
+  background-color: #808080 !important;
+}
