--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,8 @@
     height: 100%;
     padding: 0px;
     padding-right: 60px;
-  }  
+    background-color: #F0EEEE;
+  }
 }
 
 .login-container {
