--- a/src/app/user/components/user/user.component.scss
+++ b/src/app/user/components/user/user.component.scss
@@ -1,8 +1,7 @@
 .user {
   .subtitle {
     padding: 8px;
-    background-color: whitesmoke;
-    color: grey;
+    background-color: #D3D3D3;
     font-weight: 600;
   }
 }
