--- a/src/app/user/components/user-list/user-list.component.scss
+++ b/src/app/user/components/user-list/user-list.component.scss
@@ -10,8 +10,8 @@
   .list {
     cursor: pointer;
     width: 30%;
-    background-color: whitesmoke;
+    background-color: #D3D3D3;
     margin-right: 8px;
-    overflow-y: auto;    
+    overflow-y: auto;
   }
 }
