--- a/src/app/widgets/toolbar/toolbar.component.scss
+++ b/src/app/widgets/toolbar/toolbar.component.scss
@@ -1,9 +1,7 @@
 .toolbar {
-  margin-bottom: 8px;
-
   .mat-toolbar {
     height: 40px !important;
-    background-color: #393939;
+    background-color: #666f70;
     justify-content: space-between;
     padding: 0 8px !important;
 
