--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -77,7 +77,7 @@
                       [clearOnSelect]="true"
                       [showNoResults]="false"
                       [preventKeys]="['+','-']"
-                      [payload]="{priceType: selectedPrice}">
+                      [priceType]="selectedPrice">
       </product-lookup>
       <div class="price-tag">
         <mat-chip-list matSuffix>
