--- a/src/app/report/components/income/income.component.html
+++ b/src/app/report/components/income/income.component.html
@@ -6,7 +6,7 @@
         <mat-icon>filter_list</mat-icon>
         (F7)
       </button>
-      <button mat-button>
+      <button mat-button (click)="export()">
         <mat-icon>view_module</mat-icon>
       </button>
     </actions>    
