--- a/src/app/widgets/grid/grid.component.scss
+++ b/src/app/widgets/grid/grid.component.scss
@@ -5,11 +5,15 @@
 
     thead {
       background-color: #D3D3D3 !important;
-    }
 
-    .mat-header-cell {
-      font-size: 16px;
-      font-weight: 600;
+      tr.mat-header-row {
+        height: 44px;
+      }
+
+      .mat-header-cell {
+        font-size: 16px;
+        font-weight: 600;
+      }
     }
 
     .mat-row {
