--- a/src/app/widgets/toolbar/toolbar.component.scss
+++ b/src/app/widgets/toolbar/toolbar.component.scss
@@ -1,7 +1,7 @@
 .toolbar {
   .mat-toolbar {
     height: 40px !important;
-    background-color: #666f70;
+    background-color: #778899;
     justify-content: space-between;
     padding: 0 8px !important;
 
