--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,9 +21,19 @@
 }
 
 .login-container {
-  background: #93cede;
-  background: -moz-linear-gradient(45deg, #93cede 0%, #75bdd1 51%, #49a5bf 100%);
-  background: -webkit-linear-gradient(45deg, #93cede 0%,#75bdd1 51%,#49a5bf 100%);
-  background: linear-gradient(45deg, #93cede 0%,#75bdd1 51%,#49a5bf 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=1 );
+  background: url('../assets/bg3.jpg') no-repeat;  
+  background-size: cover;
+  background-position: center;
+
+  .content {
+    padding-right: 0;
+  }
+
+  .backdrop {
+    background-color: black;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
 }
