--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   height: 100%;
   width: 400px;
-  margin: auto;
   align-items: center;
+  position: absolute;
+  left: calc(50% - 200px);
 
   .content {
     padding: 12px;
