--- a/src/site.scss
+++ b/src/site.scss
@@ -105,13 +105,15 @@
 
 .sidebar {
   .subtitle {
-    width: 100%;
+    width: 105%;
     font-size: 16px;
     font-weight: 600;
     padding: 8px;
     padding-left: 12px;
-    background-color: #7F8B8C;
+    background-color: #778899;
     margin-bottom: 8px;
+    margin-left: -8px;
+    margin-right: -12px;
     color: white;
   }
 }
