--- a/src/app/user/components/user-list/user-list.component.html
+++ b/src/app/user/components/user-list/user-list.component.html
@@ -16,7 +16,7 @@
     <mat-list class="list mat-elevation-z1">
       <mat-list-item mat-ripple *ngFor="let user of users" (click)="select($event, user)">{{user.name}}</mat-list-item>
     </mat-list>
-    <user></user>
+    <user style="width: 70%"></user>
   </div>
   
 </div>
