--- a/src/app/widgets/flyout/flyout.component.html
+++ b/src/app/widgets/flyout/flyout.component.html
@@ -1,4 +1,5 @@
 <div class="ui vertical sidebar menu flyout"
+     [ngClass]="class"
      [class.top]="direction == 'top'"
      [class.right]="direction == 'right'"
      [class.bottom]="direction == 'bottom'"
